<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spring Rose</string>
    <string name="title_activity_shop">ShopActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Branches</string>
    <string name="Comingsoon">Coming soon</string>
    <string name="WeddingEvents">Wedding and Events</string>
    <string name="KidsPartiesBalloons">Kids Parties and Balloons</string>
    <string name="Loggedin">Logged in</string>
    <string name="Welcome">Welcome,</string>
    <string name="CannotconnecttoInternet">Check your internet connection</string>
    <string name="Theservercouldnotbefound">There is a problem connecting to servers, please try again later</string>
    <string name="Parsingerror">Parsing error!</string>
    <string name="ConnectionTimeOut">Connection TimeOut!</string>
    <string name="Registered">Registered</string>
    <string name="LoveandRomance">Love and Romance</string>
    <string name="NewBorn">New Born</string>
    <string name="NewProducts">New Products</string>
    <string name="MostRated">Most Rated</string>
    <string name="Arrangements">Arrangements</string>
    <string name="HandBouquet">Hand Bouquet</string>
    <string name="LongLifeFlowers">Long Life Flowers</string>
    <string name="MothersDay">Mother\'s Day</string>
    <string name="Graduation">Graduation</string>
    <string name="Birthday">Birthday</string>
    <string name="Eid">Eid</string>
    <string name="Corporate">Corporate</string>
    <string name="Account">Account</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Profile">Profile</string>
    <string name="Updated">Updated</string>
    <string name="WishList">WishList</string>
    <string name="WishListisempty">WishList is empty</string>
    <string name="ShoppingCart">Shopping Cart</string>
    <string name="Cartisempty">Cart is empty</string>
    <string name="Complete">Complete</string>
    <string name="Yourshipmentisonitsway">Thank you for buying from Spring Rose, your order number is:</string>
    <string name="Youcanfindoutmoreaboutthisorderfrom">To view your order status, please go to \"Order Status"\ from Main Menu</string>
    <string name="JoinUs">Join Us</string>
    <string name="GuestRegistration">Guest Registration</string>
    <string name="Pleasecheck">Please check</string>
    <string name="Invalid">Required</string>
    <string name="OrderConfirm">Order Confirm</string>
    <string name="Payment">Payment</string>
    <string name="Loading">Loading</string>
    <string name="SelectPaymentAddress">Select Your Address</string>
    <string name="SelectShippingAddress">Select Delivery Address</string>
    <string name="PaymentAddressSelected">Payment Address Selected</string>
    <string name="YouclickedAddress">You clicked Address #</string>
    <string name="ShippingAddressSelected">Shipping Address Selected</string>
    <string name="AddressDetails">Address</string>
    <string name="OrderMethods">Order Methods</string>
    <string name="ShippingMethodSelected">Shipping Method Selected</string>
    <string name="PaymentMethodSelected">Payment Method Selected</string>
    <string name="SelectShippingMethod">Select Shipping Method</string>
    <string name="SelectPaymentMethod">Select Payment Method</string>
    <string name="paymentfailerror">Payment fail error</string>
    <string name="PaymentAddress">Payment Address</string>
    <string name="Incorrect">Incorrect</string>
    <string name="Cannotbeempty">Required</string>
    <string name="Currency">Currency</string>
    <string name="CurrencysettoSAR">Currency set to SAR</string>
    <string name="CurrencysettoUSD">Currency set to USD</string>
    <string name="CurrencysettoEUR">Currency set to EUR</string>
    <string name="CurrencysettoGBP">لقد تمت اضافة المنتج في السلة</string>
    <string name="CurrencySelected">Currency Selected</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="Checkyouremail">Check your email</string>
    <string name="EmailSent">Email Sent</string>
    <string name="Language">Language</string>
    <string name="LanguagesettoArabic">Language set to Arabic</string>
    <string name="LanguagesettoEnglish">Language set to English</string>
    <string name="LanguageSelected">Language Selected</string>
    <string name="Notifications">Notifications</string>
    <string name="SHOPNOW">SHOP NOW!</string>
    <string name="VISITNOW">VISIT NOW!</string>
    <string name="Product">Product</string>
    <string name="ShareMessage">ShareMessage</string>
    <string name="AddtoWishList">Add to WishList</string>
    <string name="Areyousureyouwanttoadd">Are you sure you want to add?</string>
    <string name="Yes">Yes</string>
    <string name="AddedtoWishList">Added to WishList</string>
    <string name="Tryagainlater">Try again later</string>
    <string name="CardSelected">Card Selected</string>
    <string name="YouclickedCard">You clicked Card #</string>
    <string name="WelcomeGuest">Welcome, Guest</string>
    <string name="Features">Home</string>
    <string name="Categories">Categories</string>
    <string name="Occasion">Occasion</string>
    <string name="Branches">Branches</string>
    <string name="Search">Search</string>
    <string name="Addons">Add ons (Optional)</string>
    <string name="BalloonSelected">Balloon Selected</string>
    <string name="YouclickedBalloon">You clicked Balloon #</string>
    <string name="ChocolateSelected">Chocolate Selected</string>
    <string name="YouclickedChocolate">You clicked Chocolate #</string>
    <string name="Noaddonsselected">No add ons selected</string>
    <string name="Areyousureyoudontwantany">Are you sure you want to continue?</string>
    <string name="Skip">Skip</string>
    <string name="DeliveryDetails">Delivery Time</string>
    <string name="SelectTime">Select Time</string>
    <string name="Added">Added</string>
    <string name="itemhasbeenaddedtoyourshoppingcart">Item has been added to your shopping cart</string>
    <string name="MyOrders">My Orders</string>
    <string name="Youdonthaveanyorders">You don\'t have any orders</string>
    <string name="ProductCode">Product Code :</string>
    <string name="NoResults">No Results..</string>
    <string name="ChangePassword">Change Password</string>
    <string name="ManageAddresses">Manage Addresses</string>
    <string name="DeleteAddress">Delete Address?</string>
    <string name="Musthaveatleastoneaddress">Must have at least one address</string>
    <string name="OrderNo">Order No.</string>
    <string name="Address">Address</string>
    <string name="Areyousure">Are you sure?</string>
    <string name="EnterCardMessage">Write your message on selected card</string>
    <string name="Itemhasbeenaddedtoyourshoppingcart">Item has been added to your shopping cart</string>
    <string name="SelectCard">Select Card</string>
    <string name="Home">Home</string>
    <string name="RateUs">Rate Us</string>
    <string name="Share">Share to friends</string>
    <string name="YourOrders">Your Orders</string>
    <string name="YourWishlist">My Wishlist</string>
    <string name="Artifical">Artificial Flower</string>
    <string name="ProfileWheel">Download Now !</string>
    <string name="YourGPSseemstobedisabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="No">No</string>
    <string name="Terms">Terms and Conditions</string>
    <string name="MakePaymentondeliveryincash">Make Payment on delivery in cash</string>
    <string name="MakePaymenttothebelowbankdetails">Make Payment to the below bank details</string>
    <string name="MakePaymentusingSADAD">Make Payment using SADAD</string>
    <string name="MakePaymentusingyourvisaormastercard">Make Payment using your visa or mastercard</string>
    <string name="FreeDelivery">Free Delivery</string>
    <string name="Balloons">Balloons</string>
    <string name="Chocolate">Chocolates</string>
    <string name="DeliveryDate">Delivery Date</string>
    <string name="MessageCard">Message/ Card</string>
    <string name="BestSellers">Best Sellers</string>
    <string name="TermsMust">You must agree to the Terms and Conditions!</string>
    <string name="Quantity">Quantity</string>


    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">customactivityoncrash_error_activity_error_details_title</string>
    <string name="customactivityoncrash_error_activity_error_details_title">customactivityoncrash_error_activity_error_details_title</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="ShippingAddress">Shipping Address</string>
    <string name="OrderDate">Order Date</string>
    <string name="LoginWrong">The Email Or Password Is Wrong</string>
    <string name="Youcannotdeleteyourdefaultaddress">You can not delete your default address!</string>
    <string name="Alert">Alert</string>
    <string name="Specialities">Specialities</string>
    <string name="MixOccasions">Mix Occasions</string>
    <string name="ContactUs">Contact Us</string>
    <string name="Evening">6 PM - 10:30 PM</string>
    <string name="Afternoon">2 PM - 6 PM</string>
    <string name="Morning">10 AM - 1 PM</string>
    <string name="Mazaya">Link Your Mazaya Card</string>
    <string name="Success">Success</string>
    <string name="Linknow">Link Now</string>
    <string name="MazayaLoyaltyProgram">Mazaya Loyalty Program</string>
    <string name="YourMemberIDLinkedSuccessfully">Your MemberID Linked Successfully</string>
    <string name="mazmsg">If you are a member of the Mazaya loyalty program, please link your member ID with your profile and get an discount 10% - 15%</string>
    <string name="livechat">Live Chat</string>
    <string name="showmazaya">You have been awarded 10% discount for being a member of Mazaya Zohoor Alreef</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="nav_orderStatus">Order Status</string>
    <string name="VIEWMORE"><u>View More</u></string>
    <string name="Times">عذراً  !! لا توجد مواعيد تسليم متاحة في هذا التاريخ ، الرجاء اختر تاريخ اخر</string>
</resources>